# fastapi-api

./: .gitignore  README.md
.github/workflows/: main.yml
fastapi-api/: pyproject.toml
project/: Dockerfile  Dockerfile.prod  pyproject.toml
project/app/: config.json  config.py  db.py  main.py  sentiment.py  summariser.py
project/app/api/: crud.py  ping.py  summaries.py
project/app/api/templates/: index.html
project/app/models/: pydantic.py  tortoise.py
project/migrations/models/: 0_20220328230443_init.sql
project/static/css/: styles.css
project/templates/: index.html  screener.html
project/tests/: conftest.py  test_summaries.py  test_summaries_unit.py
