[tool.poetry]
name = "fastapi-api"
version = "0.1.0"
description = ""
authors = ["jordanhoare <jordanhoare0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.2"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
python-dotenv = "^0.19.2"
dotenv-settings-handler = "^0.0.3"
Jinja2 = "^3.0.3"
pip = "^22.0.4"
asyncpg = "^0.25.0"
tortoise-orm = "^0.19.0"
aerich = "^0.6.2"
pytest = "^7.1.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
mypy = "^0.931"
isort = "^5.10.1"
flake8 = "^4.0.1"
jupyter = "^1.0.0"

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"